<?xml version="1.0" encoding="utf-8"?>

<!-- TODO: shrink background and centre -->
 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:background="@drawable/masonry_wall_texture"
   android:gravity="center_horizontal"
   >
    
    <LinearLayout
        android:layout_width="250dip"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="50dip"
   >
     <LinearLayout 
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10dip">
     <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="20dip"
      android:text="COMPLETED LEVEL " />
    <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="1"
      android:textSize="20dip"
      android:id="@+id/current_level" />
  </LinearLayout>
        
        <Button
            android:id="@+id/eol_level_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/eol_level_label"
        />
        
        <Button
            android:id="@+id/eol_store_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/eol_store_label"
        />
		        
        <Button
            android:id="@+id/eol_quit_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/eol_quit_label"
        />
    </LinearLayout>
    
</LinearLayout>
