<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="15dip"> 
    <LinearLayout 
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"> 
    <LinearLayout 
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10dip">
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      style="@style/AudioFileInfoOverlayText"
      android:textSize="20dip"
      android:text="Level: " />
    <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      style="@style/AudioFileInfoOverlayText"
      android:text="None"
      android:textSize="20dip"
      android:id="@+id/current_level" />
    </LinearLayout>
    <LinearLayout 
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10dip">
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      style="@style/AudioFileInfoOverlayText"
      android:textSize="20dip"
      android:text="Score: " />
    <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      style="@style/AudioFileInfoOverlayText"
      android:text="None"
      android:textSize="20dip"
      android:id="@+id/current_score" />
    </LinearLayout>
    <LinearLayout 
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10dip">
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      style="@style/AudioFileInfoOverlayText"
      android:textSize="20dip"
      android:text="ZP: " />
    <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      style="@style/AudioFileInfoOverlayText"
      android:text="None"
      android:textSize="20dip"
      android:id="@+id/current_zen" />
  </LinearLayout>
  <LinearLayout 
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10dip">
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      style="@style/AudioFileInfoOverlayText"
      android:textSize="20dip"
      android:text="Lives: " />
    <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      style="@style/AudioFileInfoOverlayText"
      android:text="None"
      android:textSize="20dip"
      android:id="@+id/current_lives" />
    </LinearLayout>
   	</LinearLayout>
    
    <Button android:id="@+id/pause_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100px"
        android:layout_height="70px"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/button_pause"
        android:visibility="visible"
    />
    
    <Button android:id="@+id/unpause_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100px"
        android:layout_height="70px"
        android:layout_alignParentRight="true"
        android:layout_above="@id/pause_button"
        android:text="@string/button_unpause"
        android:visibility="visible"
    />
        
    <Button android:id="@+id/start_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100px"
        android:layout_height="70px"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/button_start"
        android:visibility="visible"
    />
       
    <Button android:id="@+id/store_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100px"
        android:layout_height="70px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:textSize="12dip"
        android:text="@string/button_store"
        android:visibility="visible"
    />
    
    <Button android:id="@+id/upgrade_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100px"
        android:layout_height="70px"
        android:layout_toRightOf="@id/store_button"
        android:layout_alignParentBottom="true"
        android:textSize="12dip"
        android:text="@string/button_upgrade"
        android:visibility="visible"
    />
    
        <Button android:id="@+id/delete_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100px"
        android:layout_height="70px"
        android:layout_toRightOf="@id/upgrade_button"
        android:layout_alignParentBottom="true"
        android:textSize="12dip"
        android:text="@string/button_delete"
        android:visibility="visible"
    />
    
</RelativeLayout>